@@ -19,6 +19,18 @@
 <!-- ================ CONTENT ================ -->
 <blockquote>
 
+<h2>1.4.6</h2>
+- Add 'duplicate track' features<br/>
+- Add 'recent files' menu<br/>
+- Implement resizing notes with the mouse cursor<br/>
+- Allow background tracks in score editor<br/>
+- Score editor's notation flags (musical and linear notations) are now saved in .aria file<br/>
+- Add GTK-style scrollbar for Linux systems<br/>
+- "Select all" and "Unselect all" buttons for background tracks in track properties<br/>
+- Add keyboard shortcut to change note velocity (Alt + up/down, Alt + pageup/pagedown)<br/>
+- Update to latest version of libjdksmidi<br/><br/>
+
+
 <h2>1.4.5</h2>
 - Fix bug when saving after exporting MIDI file<br/>
 - Add 'Mute' and 'Solo'<br/>
