@@ -27,7 +27,7 @@
     </script>
 
     <ul>
-    <li>   <a href="http://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.4.5/AriaMaestosa-osx-1.4.5.zip/download"><b>Stable version 1.4.5</b></a>
+    <li>   <a href="http://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.4.6/AriaMaestosa-osx-1.4.6.zip/download"><b>Stable version 1.4.6</b></a>
            for mac OS X 10.5 or better (intel only). </li>
     </ul>
     
@@ -84,8 +84,8 @@
     
     <ul>
         <li>
-            <a href="https://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.4.5/AriaMaestosaSetup-1.4.5.exe/download">
-                <b>Installer for stable version 1.4.5</b>
+            <a href="https://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.4.6/AriaMaestosaSetup-1.4.6.exe/download">
+                <b>Installer for stable version 1.4.6</b>
             </a>
         </li>
     </ul>
